--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ chinese_simplified/scripts/story/talking/talk_chiaki.rpyc
 chinese_simplified/scripts/story/talking/talk_kimochi.rpyc
 chinese_simplified/scripts/story/talking/talk_macumba.rpyc
 *.rpyc
+*.rpyc
